methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:3: error: type YELLOW is not a member of object java.awt.Color
                     {faireV(c:Color.YELLOW)
                                     ^MethodsPicture:3: error: not found: value c
                     {faireV(c:Color.YELLOW)
                             ^MethodsPicture:4: error: type RED is not a member of object java.awt.Color
                     faireV(c:Color.RED)
                                    ^MethodsPicture:4: error: not found: value c
                     faireV(c:Color.RED)
                            ^MethodsPicture:5: error: type BLUE is not a member of object java.awt.Color
                     faireV(c:Color.BLUE)
                                    ^MethodsPicture:5: error: not found: value c
                     faireV(c:Color.BLUE)
                            ^MethodsPicture:6: error: type GREEN is not a member of object java.awt.Color
                     faireV(c:Color.GREEN)}
                                    ^MethodsPicture:6: error: not found: value c
                     faireV(c:Color.GREEN)}
                            ^MethodsPicture:33: error: not found: value levebrosse
                    levebrosse()
                    ^