methods.picture.MethodsPicture.scala.code
override def run() {for (k<- 1 to 3)
                    {for (k<-1 to 4)
                     {faireV(c:Color.YELLOW)
                     faireV(c:Color.RED)
                     faireV(c:Color.BLUE)
                     faireV(c:Color.GREEN)}
                     for(k<-1 to 5)
                    {avance()}
                    }
                    gauche()
                    for (k<-1 to 5)
                    {avance()}
                    gauche()
                    for (k<-1 to 5)
                    {avance()}
                    retourne()
}

def faireV(c:Color) {avance()
                     setCouleurBrosse(c:Color)
                    baisseBrosse()
                    leveBrosse()
                    gauche()
                    avance()
                    droite()
                    avance()
                    baisseBrosse()
                    leveBrosse()
                    avance()
                    droite()
                    avance()
                    baisseBrosse()
                    levebrosse()
                    gauche()
                    avance()
                    gauche()}